# TotalRecallDB

./: Cargo.toml  LICENSE.txt  README.txt  debug_stack.py
src/: database.rs  main.rs  table.rs
src/db/: database.rs  field.rs  mod.rs  parser.rs  row.rs  row_builder.rs  row_reader.rs  schema.rs  server.rs  stream.rs  streamql.rustpeg  table.rs  value.rs
src/db/parser/: integration_tests.rs  mod.rs  streamql.rustpeg
src/db/row/: builder.rs  header.rs  mod.rs  reader.rs  row.rs  row_reader.rs
src/db/storage/: disk.rs  engine.rs  memory.rs  mod.rs  page.rs
src/db/storage/disk/: mod.rs  segment.rs
src/db/tests/: expressions.rs  mod.rs
src/db/tests/parser/: mod.rs
src/db/tests/storage/: mod.rs
tests/parser/: inserts.rs  mod.rs
